[project]
name = "document_assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "openai>=2.26.0",
    "print-color>=0.4.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
